      size.

    - Using the mouse wheel to scroll left now correctly advances to the
      next page in manga mode, instead of going back one page. Scrolling right
      has also been fixed.

    - Multiple open instances of MComix no longer overwrite each others'
      bookmarks when closed.

    - Fixed exception when trying to pack an archive using the archive editor.

    - "Smart scrolling" now also works with the mouse wheel. In smart
      scrolling mode, MComix tries to follow the natural reading flow of a
      comic book by not only scrolling up or down, but also sideways.
      Please not that smart scrolling does not work in "Fit to width" or "Best
      fit mode", as there is no need to scroll sideways in these modes.

    - Zoom is now enabled in all fit modes (best fit, fit to width, fit to
      height).

    - Added new zoom mode 'Fit to size'. This mode always stretches an image
      to a given height or width. By default, a height of 1800px is set.
      This can be changed in the preferences dialog.

    - Most confirmation dialogs can now be permanently disabled by activating
      the "Do not ask again" checkbox in each dialog. This action can be
      undone by clicking on "Clear dialog choices" in the preferences dialog.

    - Added new preference option for switching between different resizing
      algorithms (higher quality usually means longer page loading times).

    - Added "Scan now" button to library watch list dialog to trigger
      immediate update. Also added an option to scan directories recursively.
      Automatically scanning for new books every time the library is opened
      can now be disabled in the watch list dialog.

    - The watch list feature no longer tries to add archive formats that
      aren't currently supported, i.e. no .7z archives when 7z isn't
      installed or found.

    - Added an option to quit the program when the ESC key is pressed. When